adding view for single container

--- a/tunel/templates/footer.html
+++ b/tunel/templates/footer.html
@@ -8,7 +8,7 @@
          <div class="col-md-4">
             <a href="/settings">settings</a> | 
             <a href="#" onclick="showLogs()">logs</a> | 
-            <a href="/api">api</a> | 
+            <a href="/api/containers">api</a> | 
             <a href="https://singularityhub.github.io/interface">docs</a>
         </div>
     </div>
