--- a/tunel/templates/main/container.html
+++ b/tunel/templates/main/container.html
@@ -12,7 +12,7 @@
     <a href="/container/view?uri={{ container.uri }}"><h3>{{ container.uri }}</h3></a>
         <div class="row" style='margin-top:20px'>
         <div class='col-md-12'>
-           <pre style="max-width:900px" id="metrics"></pre>
+           <pre id="metrics"></pre>
         </div>
     </div>
 </div>
