--- a/tunel/templates/base.html
+++ b/tunel/templates/base.html
@@ -43,6 +43,7 @@
     {% block content %}
     {% endblock %}
 
+    {% include "main/loader.html" %}
     {% block scripts %}
     {% endblock %}
 
