--- a/tunel/templates/main/sidebar.html
+++ b/tunel/templates/main/sidebar.html
@@ -2,9 +2,9 @@
     <a href="/"><button id="containers-button" 
                         class="btn btn-default btn-xl question_button">Containers</button></a>
     <a href="/pull"><button id="pull-button" 
-                            class="btn btn-default btn-xl question_button">Pull Containers</button></a>
+                            class="btn btn-default btn-xl question_button">Pull</button></a>
     <a href="/recipe"><button id="generator-button" 
-                              class="btn btn-default btn-xl question_button">Recipe Generator</button></a>
+                              class="btn btn-default btn-xl question_button">Build</button></a>
     <hr>
 </div>
 {% if plugins %}
