--- a/tunel/templates/plugins/globus/endpoint.html
+++ b/tunel/templates/plugins/globus/endpoint.html
@@ -155,6 +155,7 @@
                })
                .then((response) => response.json())
                .then(function(data) {
+                  console.log(data)
                   $('#message-activate').html(data.data);
                   $('#message-activate').show();
                })
