--- a/tunel/templates/recipe/index.html
+++ b/tunel/templates/recipe/index.html
@@ -95,6 +95,8 @@
     $('#generator-button').addClass('btn-primary');
 
     function showBuild() {
+         $('#progress').hide();
+         $('#progress').text('');
          $("#show-modal").click();
     }
 
